recursion.logo.tree.Tree.scala.error
Compilation error:
Tree:4: error: type mismatch;
 found   : Double
 required: Int
      setColor(current(step))
                       ^